--- a/index.css
+++ b/index.css
@@ -43,12 +43,15 @@ header{
 
 section{
     padding: 100px 200px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
 
 .main{
     width: 100%;
     min-height: 100vh;
-    display: flex;
+    display:block;
     align-items:center;
     background: url(./assets/bg.jpg);
     background-size: cover;
@@ -81,8 +84,8 @@ a{
 }
 
 .btn{
-    color:white;
-    background-color: #000000;
+    color:rgb(0, 0, 0);
+    background-color: #ffffff;
     text-decoration: none;
     padding: 0.96em 2.18em;
     font-size: 1.1em;
@@ -94,7 +97,7 @@ a{
 }
 
 .btn:hover{
-    background-color: #1a1a1a;
+    background-color: wheat;
     transform: scale(1.1);
 }
 
@@ -102,5 +105,45 @@ a{
     color: #ffffff;
     padding-right: 15px;
     font-size: 1.6em;
+    margin-left: 7.5px;
+    transition: 0.5s ease;
+}
+
+.socials{
+    margin-top: 1.1rem;
+    display: block;
+}
+
+.socials a:hover{
+    font-size: 2em;
+    color: wheat;
+}
+
+.scroll{
+    position: absolute;
+    height: 4em;
+    width: 4em;
+    background-color: #ffffff;
+    color: #1a1a1a;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    bottom: 4em;    
+    font-weight: 500;
+    text-decoration: none;
+    border-radius: 5em;
+    right: 4em;
+    transition: 0.5s ease;
+}
+
+.scroll:hover{
+    background-color: wheat;
+    transform: scale(1.1);
+}
+
+
+.logoimg{
+    height: 12em;
+    width: 12em;
 }
 
