--- a/index.css
+++ b/index.css
@@ -51,7 +51,8 @@ section{
 .main{
     width: 100%;
     min-height: 100vh;
-    display:block;
+    display:flex;
+    justify-content: center;
     align-items:center;
     background: url(./assets/bg.jpg);
     background-size: cover;
@@ -147,3 +148,120 @@ a{
     width: 12em;
 }
 
+.cards{
+    background-color: #1a1a1a;
+    display: flex;
+}
+
+.cards h1{
+    font-size: 5em;
+    color: #ffffff;
+    text-align: left;
+    display: block;
+    left: 2em;
+}
+
+.cards h3{
+    font-size: 1.6em;
+    color: #ffffff;
+    text-align: left;
+    display: block;
+    left: 2em;
+}
+
+
+
+
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 40px 20px 0 20px;
+  }
+  
+  /*.container .heading{
+    width: 50%;
+    padding-bottom: 50px;*/
+  }
+  .container .heading h3{
+    font-size: 3em;
+    font-weight: bolder;
+    padding-bottom: 10px;
+    border-bottom: 3px solid #222;
+  }
+  
+  .container .heading h3 span{
+    font-weight: 100;
+  }
+  .container .box{
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+  }
+  
+  .container .box .dream{
+    display: flex;
+    flex-direction: column;
+    width: 32.5%;
+  }
+  
+  .container .box .dream img{
+    width: 100%;
+    padding-bottom: 15px;
+    border-radius: 5px;
+  }
+  
+  .container .btn{
+    margin: 40px 0 70px 0;
+    background: #222;
+    padding: 15px 40px ;
+    border-radius: 5px;
+  }
+  
+  .container .btn a{
+   color: #fff;
+   font-size: 1.2em;
+   text-decoration: none;
+   font-weight: bolder;
+   letter-spacing: 3px;
+  }
+  
+  @media only screen and (max-width: 769px){
+      .container .box{
+     flex-direction: column;
+    }
+  
+  .container .box .dream{
+    width: 100%;
+  }
+  
+  
+  
+  
+  
+  }
+  
+  @media only screen and (max-width: 643px){
+  .container .heading{
+    width: 100%;
+  }
+  .container .heading h3{
+    font-size: 1em;
+  
+  }
+
+}
+
+.cards{
+    padding: 50px 50px;
+}
+
+.heading{
+    padding: 30px 200px;
+    top: 0px;
+    display: flex;
+    justify-content: left;
+    left: 100;
+}
